--- a/main.html
+++ b/main.html
@@ -12,7 +12,9 @@
     <button type="button" class="btn btn-outline-secondary">Button 2</button>
     <button type="button" class="btn btn-success btn-lg ">Button 3</button>
     <button type="button" class="btn btn-danger btn-sm">Button 4</button>
-    <button type="button" class="btn btn-warning">Button 5</button>
+    <div class="d-grid"> <button type="button" class="btn btn-warning">Button 5</button></div> 
+    <button type="button" class="btn btn-info">Button 6</button>
+    <button type="button" class="btn btn-info">Button 6</button>
     <button type="button" class="btn btn-info">Button 6</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
