--- a/main.html
+++ b/main.html
@@ -12,10 +12,10 @@
     <button type="button" class="btn btn-outline-secondary">Button-2</button>
     <button type="button" class="btn btn-success btn-lg ">Button-3</button>
     <button type="button" class="btn btn-danger btn-sm">Button-4</button>
-    <div class="d-grid"> <button type="button" class="btn btn-warning">Button-5</button></div> 
-    <button type="button" class="btn btn-info">Button-5</button>
-    <button type="button" class="btn btn-light">Button-6</button>
-    <button type="button" class="btn btn-light"><a href="#">Button-7</a></button>
+    <button type="button" class="btn btn-warning btn-lg vw-100">Button-5</button> 
+    <button type="button" class="btn btn-info disabled">Button-6</button>
+    <button type="button" class="btn btn-light">Button-7</button>
+    <button type="button" class="btn btn-link">Button-8</button>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
